# omero-metrics

./: README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  omero_plugin.yml  publish.yml  publish_pypi.yml
docs/dev_docs/: technical_doc.md
docs/slides/general_presentation/: _metadata.yaml  omero-metrics.qmd
omero_metrics/: views.py
omero_metrics/dash_apps/: dash_group.py  dash_project.py
omero_metrics/dash_apps/dash_analyses/: dataset_shared_components.py
omero_metrics/dash_apps/dash_analyses/dash_foi/: dash_dataset_foi.py  dash_image_foi.py
omero_metrics/dash_apps/dash_analyses/dash_psf_beads/: dash_dataset_psf_beads.py  dash_image_average_bead.py  dash_image_psf_beads.py
omero_metrics/dash_apps/dash_forms/: dash_dataset_form.py
omero_metrics/tools/: context_loaders.py  dash_forms_tools.py  data_managers.py  data_type.py  dump.py  metric_descriptions.py  omero_tools.py
test/omero-server/: server_structure.yaml  structure_generator.py
test/omero-server/config_files/field_illumination/: study_config_FieldIllumination.yaml
test/omero-server/config_files/psf_beads/: study_config_PSFBeads.yaml
test/omero-web/: requirements.txt
test/unit/: test_omero_tools.py  test_views.py
