[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "omero-metrics"
description = "An OMERO webapp to follow microscope performance over time"
# Emails are omitted from author list due to PyPI display issue https://github.com/pypi/warehouse/issues/12877
#authors = [
#    {name = "Julio Mateos Langerak", email = "julio.mateos-langerak@igh,cnrs.fr"},
#    {name = "Oumou Dhmine", email = "oumoudhmine@gmail.com"}
#]
authors = [
    {name = "Julio Mateos Langerak"},
    {name = "Oumou Dhmine"}
]
maintainers = [
    {name = "Julio Mateos Langerak", email = "julio.mateos-langerak@igh,cnrs.fr"},
    {name = "Oumou Dhmine", email = "oumoudhmine@gmail.com"}
]
keywords = ["microscopy", "metrology", "OMERO"]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9.18,<3.13"
dynamic = [
    "classifiers",
    "dependencies",
]
version = "0.2.8"

[project.urls]
homepage = "https://github.com/pro-dho/omero-metrics"
repository = "https://github.com/pro-dho/omero-metrics"
documentation = "https://pro-dho.github.io/omero-metrics/"

[tool.poetry]
packages = [
    { include = "omero_metrics" },
]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
bootstrap4 = "*"  # Verify this dependency
django-plotly-dash = "*" #"2.4.3"  # current 2.5
dash = "*" #">=2.18.0,<3.0"  # current 3.2.0
plotly = "*" #"5.20.0"  # current 6.3.1
dpd_static_support = "0.0.5"
dash-bootstrap-components = "*"  # current "2.0.4"
django-bootstrap4 = "*"  # current 25.2
dash-mantine-components = "2.6.1" #"0.14.5"  # current 2.3.0
dash-iconify = "*"  # current "0.1.2"
openpyxl = "*"  # TODO: remove dependency
dash-renderer = "*"  # current "1.9.1"
microscopemetrics = { git = "https://github.com/juliomateoslangerak/microscope-metrics.git", branch = "dev" }
#microscopemetrics = "0.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-django = "4.11.1"
hypothesis = "^6"

[tool.poetry.group.dev.dependencies]
omero-web = "<5.31" # current "5.29.2"
# We provide links to GlencoeSoftware's precompiled binaries
# see https://www.glencoesoftware.com/blog/2023/12/08/ice-binaries-for-omero.html
zeroc-ice = [
    { platform = "linux", python = "3.9", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp39-cp39-manylinux_2_28_x86_64.whl"},
    { platform = "linux", python = "3.10", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp310-cp310-manylinux_2_28_x86_64.whl"},
    { platform = "linux", python = "3.11", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp311-cp311-manylinux_2_28_x86_64.whl"},
    { platform = "linux", python = "3.12", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-manylinux_2_28_x86_64.whl"},
    { platform = "darwin", python = "3.9", url = "https://github.com/glencoesoftware/zeroc-ice-py-macos-x86_64/releases/download/20231130/zeroc_ice-3.6.5-cp39-cp39-macosx_11_0_x86_64.whl"},
    { platform = "darwin", python = "3.10", url = "https://github.com/glencoesoftware/zeroc-ice-py-macos-universal2/releases/download/20240131/zeroc_ice-3.6.5-cp310-cp310-macosx_11_0_universal2.whl"},
    { platform = "darwin", python = "3.11", url = "https://github.com/glencoesoftware/zeroc-ice-py-macos-universal2/releases/download/20240131/zeroc_ice-3.6.5-cp311-cp311-macosx_11_0_universal2.whl"},
    { platform = "darwin", python = "3.12", url = "https://github.com/glencoesoftware/zeroc-ice-py-macos-universal2/releases/download/20240131/zeroc_ice-3.6.5-cp312-cp312-macosx_11_0_universal2.whl"},
    { platform = "win32", python = "3.9", url = "https://github.com/glencoesoftware/zeroc-ice-py-win-x86_64/releases/download/20240325/zeroc_ice-3.6.5-cp39-cp39-win_amd64.whl"},
    { platform = "win32", python = "3.10", url = "https://github.com/glencoesoftware/zeroc-ice-py-win-x86_64/releases/download/20240325/zeroc_ice-3.6.5-cp310-cp310-win_amd64.whl"},
    { platform = "win32", python = "3.11", url = "https://github.com/glencoesoftware/zeroc-ice-py-win-x86_64/releases/download/20240325/zeroc_ice-3.6.5-cp311-cp311-win_amd64.whl"},
    { platform = "win32", python = "3.12", url = "https://github.com/glencoesoftware/zeroc-ice-py-win-x86_64/releases/download/20240325/zeroc_ice-3.6.5-cp312-cp312-win_amd64.whl"}
]

black = {version = "^26", python = ">=3.10"}
poetry = "^2"
isort = "^6"
pre-commit = "^4"


[tool.pytest.ini_options]
# DJANGO_SETTINGS_MODULE is NOT set here — it would force omeroweb.settings
# to load at pytest startup, which requires OMERODIR (an OMERO server install).
# CI sets both DJANGO_SETTINGS_MODULE and OMERODIR via environment variables.
# For local unit tests, use: pytest test/unit/
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.isort]
profile = "black"


